make the extra capacity as a warning
